fixed z-index of coursework

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -247,6 +247,7 @@ body {
     border-radius: 1%;
     width: auto;
     height: 50%;
+    z-index: 0;
 }
 
 #buttons {
